return auc / highest metric from run for in memory optimisation. deprecated reading score from disk for parallel execution.

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -451,9 +451,13 @@
     "    #pass object to be evaluated and write results to csv\n",
     "    res = main.run(ml_grid_object, local_param_dict=local_param_dict).execute()\n",
     "    \n",
+    "    \n",
+    "    \n",
     "    results_df = pd.read_csv(base_project_dir + 'final_grid_score_log.csv')\n",
     "    \n",
-    "    highest_metric_from_run = results_df[results_df['i'] == str(idx)].sort_values(by='auc')['auc'].iloc[-1]\n",
+    "    #highest_metric_from_run = results_df[results_df['i'] == str(idx)].sort_values(by='auc')['auc'].iloc[-1]\n",
+    "    \n",
+    "    highest_metric_from_run = res # for hyperopt multi procesess #AUC\n",
     "    \n",
     "    display(results_df[results_df['i'] == str(idx)].sort_values(by='auc').iloc[0])\n",
     "    \n",
@@ -514,6 +518,13 @@
    "source": [
     "trials = Trials()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
