patched multi proc example usage

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -627,35 +627,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from concurrent.futures import ThreadPoolExecutor, TimeoutError\n",
+    "import threading\n",
+    "from concurrent.futures import ThreadPoolExecutor, TimeoutError, as_completed\n",
     "from hyperopt import fmin, tpe, Trials\n",
+    "import time\n",
+    "from datetime import datetime\n",
+    "from sklearn.utils.parallel import delayed, Parallel\n",
+    "from joblib import parallel_backend\n",
     "\n",
-    "def run_fmin_with_timeout(objective, space, max_evals, timeout):\n",
-    "    with ThreadPoolExecutor(max_workers=1) as executor:\n",
-    "        future = executor.submit(fmin, fn=objective, space=space, algo=tpe.suggest, max_evals=max_evals, trials=Trials(), verbose=0)\n",
-    "        try:\n",
-    "            result = future.result(timeout=timeout)\n",
-    "            return result\n",
-    "        except TimeoutError:\n",
-    "            print(\"Timeout reached, skipping this iteration.\")\n",
-    "            return None  # Or handle accordingly\n",
+    "def process_single_outcome(outcome_index, outcome_var_list):\n",
+    "    \"\"\"Process a single outcome index\"\"\"\n",
+    "    outcome_var = outcome_var_list[outcome_index]\n",
+    "    thread_name = threading.current_thread().name\n",
+    "    start_time = datetime.now()\n",
     "\n",
-    "#%%prun -s cumulative\n",
+    "    print(f\"[{start_time}] Thread: {thread_name} - Starting outcome {outcome_index}: {outcome_var}\")\n",
     "\n",
-    "for outcome_index in range(len(outcome_var_list)):\n",
-    "    print(outcome_index)\n",
-    "    outcome_index_val = outcome_index\n",
-    "    print(outcome_var_list[outcome_index])\n",
+    "    # Wrap objective to include the outcome_var and handle parallel backend\n",
+    "    def objective_with_outcome(params):\n",
+    "        print(f\"Thread: {thread_name} - Evaluating params: {params} for outcome {outcome_var}\")\n",
+    "        # Use threading backend for scikit-learn operations\n",
+    "        with parallel_backend('threading', n_jobs=1):\n",
+    "            return objective(params, outcome_var)\n",
     "\n",
     "    try:\n",
-    "        best = run_fmin_with_timeout(objective, space, max_evals=3, timeout=360*5)  # 5 seconds timeout\n",
-    "        if best is not None:\n",
-    "            print(\"Best parameters:\", best)\n",
-    "        else:\n",
-    "            print(\"No result due to timeout.\")\n",
+    "        # Configure scikit-learn to use threading backend\n",
+    "        with parallel_backend('threading', n_jobs=1):\n",
+    "            best = fmin(\n",
+    "                fn=objective_with_outcome,\n",
+    "                space=space,\n",
+    "                algo=tpe.suggest,\n",
+    "                max_evals=10,\n",
+    "                trials=Trials(),\n",
+    "                verbose=0\n",
+    "            )\n",
+    "        end_time = datetime.now()\n",
+    "        print(f\"[{end_time}] Thread: {thread_name} - Finished outcome {outcome_index} (Duration: {end_time - start_time})\")\n",
+    "        return outcome_index, best, None\n",
     "    except Exception as e:\n",
-    "        print(\"Exception on fmin on\", outcome_var_list[outcome_index])\n",
-    "        print(e)\n"
+    "        print(f\"Error in {thread_name} for outcome {outcome_var}: {str(e)}\")\n",
+    "        return outcome_index, None, str(e)\n",
+    "\n",
+    "start_total = datetime.now()\n",
+    "print(f\"Starting all optimizations at {start_total}\")\n",
+    "\n",
+    "# Use threading backend globally\n",
+    "with parallel_backend('threading', n_jobs=80):\n",
+    "    # Run parallel processing using ThreadPoolExecutor\n",
+    "    with ThreadPoolExecutor(max_workers=19) as executor:  # One thread per outcome\n",
+    "        futures = [executor.submit(process_single_outcome, i, outcome_var_list) for i in range(19)]\n",
+    "\n",
+    "        print(f\"Submitted {len(futures)} tasks to parallel executor\")\n",
+    "\n",
+    "        # Process results as they complete\n",
+    "        for future in as_completed(futures):\n",
+    "            outcome_index = futures.index(future)\n",
+    "            try:\n",
+    "                _, best, error = future.result(timeout=360*2)\n",
+    "\n",
+    "                if error:\n",
+    "                    print(f\"Exception on fmin on {outcome_var_list[outcome_index]}: {error}\")\n",
+    "                elif best is not None:\n",
+    "                    print(f\"Best parameters for {outcome_var_list[outcome_index]}: {best}\")\n",
+    "                else:\n",
+    "                    print(f\"No result for {outcome_var_list[outcome_index]}\")\n",
+    "\n",
+    "            except TimeoutError:\n",
+    "                print(f\"Timeout reached for {outcome_var_list[outcome_index]}\")\n",
+    "\n",
+    "end_total = datetime.now()\n",
+    "print(f\"\\nCompleted all optimizations at {end_total}\")\n",
+    "print(f\"Total duration: {end_total - start_total}\")"
    ]
   },
   {
