added highest score tracking for multi proc opt

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -449,7 +449,7 @@
     "    #             )])\n",
     "\n",
     "    #pass object to be evaluated and write results to csv\n",
-    "    res = main.run(ml_grid_object, local_param_dict=local_param_dict).execute()\n",
+    "    errors, highest_score = main.run(ml_grid_object, local_param_dict=local_param_dict).execute()\n",
     "    \n",
     "    \n",
     "    \n",
@@ -457,7 +457,7 @@
     "    \n",
     "    #highest_metric_from_run = results_df[results_df['i'] == str(idx)].sort_values(by='auc')['auc'].iloc[-1]\n",
     "    \n",
-    "    highest_metric_from_run = res # for hyperopt multi procesess #AUC\n",
+    "    highest_metric_from_run = highest_score # for hyperopt multi procesess #AUC\n",
     "    \n",
     "    display(results_df[results_df['i'] == str(idx)].sort_values(by='auc').iloc[0])\n",
     "    \n",
