initial results processing modules, example usage/unit test integration, mermaid diagram,

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -934,10 +934,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_path = os.path.join(parent_dir, latest_folder, 'models')\n",
+    "# models_path = os.path.join(parent_dir, latest_folder, 'models')\n",
     "\n",
-    "len(os.listdir(models_path\n",
-    "))"
+    "# len(os.listdir(models_path\n",
+    "# ))"
    ]
   },
   {
@@ -945,14 +945,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the necessary classes\n",
+    "from ml_grid.results_processing.core import ResultsAggregator\n",
+    "from ml_grid.results_processing.plot_master import MasterPlotter\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Load your data using the ResultsAggregator\n",
+    "#    Replace with the actual path to your results and feature names file.\n",
+    "#    The feature_names_csv is optional but required for feature-related plots.\n",
+    "try:\n",
+    "    aggregator = ResultsAggregator(\n",
+    "        root_folder='HFE_ML_experiments',\n",
+    "        feature_names_csv='test_data_hfe_1yr_m_small_multiclass.csv')\n",
+    "    results_df = aggregator.aggregate_all_runs()\n",
+    "\n",
+    "    # 2. Instantiate the MasterPlotter with your data\n",
+    "    master_plotter = MasterPlotter(results_df)\n",
+    "\n",
+    "    # 3. Call the plot_all() method to generate all visualizations\n",
+    "    #    You can customize the primary metric and other options.\n",
+    "    master_plotter.plot_all(metric='auc', stratify_by_outcome=True)\n",
+    "\n",
+    "except (ValueError, FileNotFoundError) as e:\n",
+    "    print(f\"An error occurred: {e}\")\n",
+    "    print(\"Please ensure your results folder path is correct and contains valid run data.\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "ml_grid_env",
    "language": "python",
-   "name": "python3"
+   "name": "ml_grid_env"
   },
   "language_info": {
    "codemirror_mode": {
