adjusted sample data path and results path. added initial results analysis code block.

--- a/notebooks/unit_test_synthetic_time_series.ipynb
+++ b/notebooks/unit_test_synthetic_time_series.ipynb
@@ -283,7 +283,7 @@
     "\n",
     "from ml_grid.pipeline.data import pipe\n",
     "\n",
-    "base_project_dir_global = 'HFE_ML_experiments/'\n",
+    "base_project_dir_global = 'HFE_ML_experiments_ts/'\n",
     "\n",
     "logger = setup_logger(log_folder_path = base_project_dir_global)\n",
     "\n",
@@ -309,7 +309,7 @@
     "\n",
     "pathlib.Path(base_project_dir).mkdir(parents=True, exist_ok=True) \n",
     "\n",
-    "input_csv_path = os.path.join('..', 'gloabl_files', 'ml_binary_classification_gridsearch_hyperOpt', 'notebooks' ,'unit_test_synthetic_time_series_data_large.csv') #large\n",
+    "input_csv_path = 'unit_test_synthetic_time_series_data_large.csv' #large\n",
     "\n",
     "#init csv to store each local projects results\n",
     "\n",
@@ -423,7 +423,7 @@
     "best = fmin(fn=objective,\n",
     "            space=space,\n",
     "            algo=tpe.suggest,\n",
-    "            max_evals=100,\n",
+    "            max_evals=2,\n",
     "            trials = trials,\n",
     "           verbose=1\n",
     "           )"
@@ -475,6 +475,39 @@
     "\n",
     "\n",
     "feature_encoding_to_feature_names(pd.read_csv('../gloabl_files/ml_grid_ts_project/ml_binary_classification_gridsearch_hyperOpt/ml_grid/tests/unit_test_synthetic_time_series_data_large.csv'), results_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the necessary classes\n",
+    "from ml_grid.results_processing.core import ResultsAggregator\n",
+    "from ml_grid.results_processing.plot_master import MasterPlotter\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Load your data using the ResultsAggregator\n",
+    "#    Replace with the actual path to your results and feature names file.\n",
+    "#    The feature_names_csv is optional but required for feature-related plots.\n",
+    "try:\n",
+    "    aggregator = ResultsAggregator(\n",
+    "        root_folder='HFE_ML_experiments_ts',\n",
+    "        feature_names_csv='test_data_hfe_1yr_m_small_multiclass.csv')\n",
+    "    results_df = aggregator.aggregate_all_runs()\n",
+    "\n",
+    "    # 2. Instantiate the MasterPlotter with your data\n",
+    "    master_plotter = MasterPlotter(results_df)\n",
+    "\n",
+    "    # 3. Call the plot_all() method to generate all visualizations\n",
+    "    #    You can customize the primary metric and other options.\n",
+    "    master_plotter.plot_all(metric='auc', stratify_by_outcome=True)\n",
+    "\n",
+    "except (ValueError, FileNotFoundError) as e:\n",
+    "    print(f\"An error occurred: {e}\")\n",
+    "    print(\"Please ensure your results folder path is correct and contains valid run data.\")\n",
+    "\n"
    ]
   },
   {
@@ -855,7 +888,7 @@
   "kernelspec": {
    "display_name": "ml_grid_ts_env",
    "language": "python",
-   "name": "ml_grid_ts_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -867,7 +900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
