removed now unnecessary path additions, cleaned up.

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -16,14 +16,7 @@
     "os.environ[\"PYTHONWARNINGS\"] = \"ignore::UserWarning\"\n",
     "warnings.filterwarnings('ignore') \n",
     "#os.environ[\"CUDA_DEVICE_ORDER\"]=\"PCI_BUS_ID\"   # see issue #152\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\"\n",
-    "\n",
-    "path_to_add = \"../gloabl_files/ml_binary_classification_gridsearch_hyperOpt/\"\n",
-    "sys.path.append(path_to_add)\n",
-    "path_to_add = \"../\"\n",
-    "sys.path.append(path_to_add)\n",
-    "path_to_add = \"/mnt/cs0/samorah/gloabl_files/ml_binary_classification_gridsearch_hyperOpt\"\n",
-    "sys.path.append(path_to_add)"
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"1\""
    ]
   },
   {
@@ -62,27 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Forcibly install packages one by one\n",
-    "# import subprocess\n",
-    "\n",
-    "# with open('requirements.txt', 'r') as file:\n",
-    "#     packages = file.readlines()\n",
-    "\n",
-    "# for package in packages:\n",
-    "#     package = package.strip()  # Remove leading/trailing whitespaces, if any\n",
-    "#     try:\n",
-    "#         subprocess.check_call([\"pip\", \"install\", package])\n",
-    "#         print(f\"Successfully installed {package}\")\n",
-    "#     except Exception as e:\n",
-    "#         print(f\"Failed to install {package}: {e}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from ml_grid.util import grid_param_space"
    ]
   },
@@ -94,15 +66,6 @@
    "source": [
     "import ipywidgets as ipw\n",
     "output = ipw.Output()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#%pip install hyperopt"
    ]
   },
   {
@@ -625,7 +588,7 @@
     "    from datetime import datetime\n",
     "    from hyperopt import fmin, tpe, Trials\n",
     "    from joblib import Parallel, delayed\n",
-    "    from sklearn.utils._joblib import parallel_backend  # Correct import for parallel_backend\n",
+    "    from joblib import parallel_backend  # Correct import for parallel_backend\\n\n",
     "\n",
     "    # Get number of cores\n",
     "    num_cores = multiprocessing.cpu_count()\n",
@@ -917,27 +880,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "print(\"done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# models_path = os.path.join(parent_dir, latest_folder, 'models')\n",
-    "\n",
-    "# len(os.listdir(models_path\n",
-    "# ))"
    ]
   },
   {
@@ -976,7 +920,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_grid_env",
+   "display_name": "Python (ml_grid_env)",
    "language": "python",
    "name": "ml_grid_env"
   },
