implemented default single thread to avoid h2o and multiprocessing errors.

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -932,13 +932,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# %%prun\n",
     "if multiple_outcomes_example:\n",
@@ -960,6 +953,10 @@
     "    from ml_grid.pipeline.data import pipe\n",
     "    from ml_grid.pipeline.main import run\n",
     "    from ml_grid.util.create_experiment_directory import create_experiment_directory\n",
+    "\n",
+    "    # ========== TOGGLE FOR SINGLE-THREADED MODE ==========\n",
+    "    USE_SINGLE_THREADED = True  # Set to True for single-threaded execution\n",
+    "    # =====================================================\n",
     "\n",
     "    # 1. --- Load Configuration from YAML ---\n",
     "    # This assumes 'config_hyperopt.yml' is in a location accessible from the notebook\n",
@@ -1090,15 +1087,28 @@
     "        return (outcome_var, best)\n",
     "\n",
     "    # 8. --- Main Execution Block ---\n",
-    "    num_cores = max(1, multiprocessing.cpu_count() - 2)\n",
     "    start_total = datetime.now()\n",
-    "    print(f\"Starting all optimizations at {start_total} using {num_cores} cores.\")\n",
+    "    \n",
+    "    if USE_SINGLE_THREADED:\n",
+    "        # ========== SINGLE-THREADED EXECUTION ==========\n",
+    "        print(f\"Starting all optimizations at {start_total} using SINGLE-THREADED mode.\")\n",
+    "        \n",
+    "        results = []\n",
+    "        for outcome in outcome_var_list:\n",
+    "            result = process_single_outcome(outcome)\n",
+    "            results.append(result)\n",
+    "        \n",
+    "    else:\n",
+    "        # ========== PARALLEL EXECUTION ==========\n",
+    "        num_cores = max(1, multiprocessing.cpu_count() - 2)\n",
+    "        \n",
+    "        print(f\"Starting all optimizations at {start_total} using {num_cores} cores.\")\n",
     "\n",
-    "    # Parallel will raise exceptions from workers automatically\n",
-    "    results = Parallel(n_jobs=num_cores, verbose=10)(\n",
-    "        delayed(process_single_outcome)(outcome)\n",
-    "        for outcome in outcome_var_list\n",
-    "    )\n",
+    "        # Parallel will raise exceptions from workers automatically\n",
+    "        results = Parallel(n_jobs=num_cores, verbose=10)(\n",
+    "            delayed(process_single_outcome)(outcome)\n",
+    "            for outcome in outcome_var_list\n",
+    "        )\n",
     "\n",
     "    # --- Process and display final results ---\n",
     "    print(\"\\n\" + \"=\"*70)\n",
@@ -1299,6 +1309,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1476,7 +1493,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closing connection _sid_abe8 at exit\n",
+      "H2O session _sid_abe8 closed.\n",
+      "Closing connection _sid_b630 at exit\n",
+      "H2O session _sid_b630 closed.\n",
+      "Closing connection _sid_bdbe at exit\n",
+      "H2O session _sid_bdbe closed.\n",
+      "Closing connection _sid_b41b at exit\n",
+      "H2O session _sid_b41b closed.\n",
+      "Closing connection _sid_818c at exit\n",
+      "H2O session _sid_818c closed.\n",
+      "Closing connection _sid_9eef at exit\n",
+      "H2O session _sid_9eef closed.\n",
+      "Closing connection _sid_beac at exit\n",
+      "H2O session _sid_beac closed.\n",
+      "Closing connection _sid_93b5 at exit\n",
+      "H2O session _sid_93b5 closed.\n",
+      "Closing connection _sid_8746 at exit\n",
+      "H2O session _sid_8746 closed.\n",
+      "Closing connection _sid_a12e at exit\n",
+      "H2O session _sid_a12e closed.\n",
+      "Closing connection _sid_9419 at exit\n",
+      "H2O session _sid_9419 closed.\n",
+      "Closing connection _sid_90b5 at exit\n",
+      "H2O session _sid_90b5 closed.\n",
+      "Closing connection _sid_9b76 at exit\n",
+      "H2O session _sid_9b76 closed.\n",
+      "Closing connection _sid_a500 at exit\n",
+      "H2O session _sid_a500 closed.\n",
+      "Closing connection _sid_a1f4 at exit\n",
+      "H2O session _sid_a1f4 closed.\n",
+      "Closing connection _sid_acb7 at exit\n",
+      "H2O session _sid_acb7 closed.\n"
+     ]
+    }
+   ],
    "source": [
     "display(config)"
    ]
