config parsing fix

--- a/notebooks/unit_test_synthetic.ipynb
+++ b/notebooks/unit_test_synthetic.ipynb
@@ -305,9 +305,10 @@
     "    print(\"  Instantiating the 'run' class with the data object...\")\n",
     "    # Instantiate the 'run' class with the object from the data pipeline\n",
     "    run_instance = run(\n",
-    "        ml_grid_object=ml_grid_object,\n",
-    "        local_param_dict=local_param_dict\n",
-    "    )\n",
+    "                local_param_dict=local_param_dict,\n",
+    "                ml_grid_object=ml_grid_object,\n",
+    "                global_params=config['global_params']\n",
+    "            )\n",
     "\n",
     "    print(\"  Executing the hyperparameter search and cross-validation...\")\n",
     "    # Execute the hyperparameter search and cross-validation for all models.\n",
@@ -693,6 +694,13 @@
     "        print(f\"Error during cleanup of run_0: {e}\")\n",
     "    print(\"\\n6. Clean up complete.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1493,46 +1501,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Closing connection _sid_abe8 at exit\n",
-      "H2O session _sid_abe8 closed.\n",
-      "Closing connection _sid_b630 at exit\n",
-      "H2O session _sid_b630 closed.\n",
-      "Closing connection _sid_bdbe at exit\n",
-      "H2O session _sid_bdbe closed.\n",
-      "Closing connection _sid_b41b at exit\n",
-      "H2O session _sid_b41b closed.\n",
-      "Closing connection _sid_818c at exit\n",
-      "H2O session _sid_818c closed.\n",
-      "Closing connection _sid_9eef at exit\n",
-      "H2O session _sid_9eef closed.\n",
-      "Closing connection _sid_beac at exit\n",
-      "H2O session _sid_beac closed.\n",
-      "Closing connection _sid_93b5 at exit\n",
-      "H2O session _sid_93b5 closed.\n",
-      "Closing connection _sid_8746 at exit\n",
-      "H2O session _sid_8746 closed.\n",
-      "Closing connection _sid_a12e at exit\n",
-      "H2O session _sid_a12e closed.\n",
-      "Closing connection _sid_9419 at exit\n",
-      "H2O session _sid_9419 closed.\n",
-      "Closing connection _sid_90b5 at exit\n",
-      "H2O session _sid_90b5 closed.\n",
-      "Closing connection _sid_9b76 at exit\n",
-      "H2O session _sid_9b76 closed.\n",
-      "Closing connection _sid_a500 at exit\n",
-      "H2O session _sid_a500 closed.\n",
-      "Closing connection _sid_a1f4 at exit\n",
-      "H2O session _sid_a1f4 closed.\n",
-      "Closing connection _sid_acb7 at exit\n",
-      "H2O session _sid_acb7 closed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(config)"
    ]
